spade-tests/src/snapshots/spade_tests__wordlength_inference__inner_functions_aaia.snap
---
source: spade-tests/src/wordlength_inference.rs
---
fn g() -> int<3> { 0 }
fn f<a, b>(a: int<2>) -> int<0> {
    g() + a
}
entity main(clk: clock, rst: bool) -> int<0> { f(0) }


error: The wordlength isn't what we infered it to - inference got 2 bits and you claimed 0 bits
  ┌─ testinput:5:48
  │
5 │ entity main(clk: clock, rst: bool) -> int<0> { f(0) }
  │                                                ^^^^ Here 2 bits were infered


